--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
     "version":2,
-    "builds":{
+    "builds":[{
         "src":"app.js",
         "use":"@vercel/node"
-    },
+    }
+    ],
     "routes":[
         {
             "src":"/(.*)",
